improved breast cancer model accuracy to 0.8636

--- a/breast_model.ipynb
+++ b/breast_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "id": "4ae34006",
    "metadata": {
     "scrolled": true,
@@ -12,10 +12,10 @@
     {
      "data": {
       "text/plain": [
-       "<module 'data' from '/Users/amolmenon/Documents/Spring 2023/CMSC472/cmsc472_medicaldiagnosis/data.py'>"
+       "<module 'data' from '/Users/shreyashete/Documents/cs projects/CMSC472/cmsc472_medicaldiagnosis/data.py'>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "id": "961afe8d",
    "metadata": {
     "tags": []
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 62,
    "id": "7a66753a",
    "metadata": {
     "tags": []
@@ -72,7 +72,7 @@
        "        [ 69.1472,  69.1472,  69.1472,  ..., 138.4047, 138.4047, 138.4047]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "id": "f404d0c2",
    "metadata": {
     "tags": []
@@ -91,13 +91,13 @@
    "outputs": [],
    "source": [
     "batch_size = 32\n",
-    "learning_rate = 0.0005\n",
+    "learning_rate = 0.00005\n",
     "epochs = 50"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 64,
    "id": "56c68852",
    "metadata": {
     "tags": []
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 65,
    "id": "6814353b",
    "metadata": {
     "tags": []
@@ -123,17 +123,24 @@
     "        self.conv1 = nn.Conv2d(1, 16, kernel_size=3, stride=1, padding=1)\n",
     "        self.relu1 = nn.ReLU()\n",
     "        self.pool1 = nn.MaxPool2d(kernel_size=2, stride=2, padding=0)\n",
+    "        self.batchnorm1 = nn.BatchNorm2d(num_features=16)\n",
+    "        self.dropout1 = nn.Dropout(0.3)\n",
     "\n",
     "        self.conv2 = nn.Conv2d(16, 32, kernel_size=3, stride=1, padding=1)\n",
     "        self.relu2 = nn.ReLU()\n",
     "        self.pool2 = nn.MaxPool2d(kernel_size=2, stride=2, padding=0)\n",
+    "        self.batchnorm2 = nn.BatchNorm2d(num_features=32)\n",
+    "        self.dropout2 = nn.Dropout(0.3)\n",
     "\n",
     "        self.conv3 = nn.Conv2d(32, 64, kernel_size=3, stride=1, padding=1)\n",
     "        self.relu3 = nn.ReLU()\n",
     "        self.pool3 = nn.MaxPool2d(kernel_size=2, stride=2, padding=0)\n",
+    "        self.batchnorm3 = nn.BatchNorm2d(num_features=64)\n",
+    "        self.dropout3 = nn.Dropout(0.3)\n",
     "\n",
     "        self.fc1 = nn.Linear(64 * 32 * 32, 128)\n",
     "        self.relu4 = nn.ReLU()\n",
+    "        self.dropout4=nn.Dropout(0.3)\n",
     "        self.fc2 = nn.Linear(128, 1)\n",
     "        self.sigmoid = nn.Sigmoid()\n",
     "\n",
@@ -141,18 +148,25 @@
     "        x = self.conv1(x)\n",
     "        x = self.relu1(x)\n",
     "        x = self.pool1(x)\n",
+    "        x = self.batchnorm1(x)\n",
+    "        x = self.dropout1(x)\n",
     "\n",
     "        x = self.conv2(x)\n",
     "        x = self.relu2(x)\n",
     "        x = self.pool2(x)\n",
+    "        x = self.batchnorm2(x)\n",
+    "        x = self.dropout2(x)\n",
     "\n",
     "        x = self.conv3(x)\n",
     "        x = self.relu3(x)\n",
     "        x = self.pool3(x)\n",
+    "        x = self.batchnorm3(x)\n",
+    "        x = self.dropout3(x)\n",
     "\n",
     "        x = x.view(-1, 64 * 32 * 32)\n",
     "        x = self.fc1(x)\n",
     "        x = self.relu4(x)\n",
+    "        x = self.dropout4(x)\n",
     "        x = self.fc2(x)\n",
     "        x = self.sigmoid(x)\n",
     "        return x"
@@ -160,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "id": "5d627129",
    "metadata": {
     "tags": []
@@ -174,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "id": "88f9bc4a",
    "metadata": {
     "tags": []
@@ -184,56 +198,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch : 0, Train loss: 30.42602 , Train Acc: 0.8000, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 1, Train loss: 32.98611 , Train Acc: 0.6667, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 2, Train loss: 33.02083 , Train Acc: 0.6000, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 3, Train loss: 32.88194 , Train Acc: 0.8667, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 4, Train loss: 32.98611 , Train Acc: 0.6667, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 5, Train loss: 32.91667 , Train Acc: 0.8000, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 6, Train loss: 33.05556 , Train Acc: 0.5333, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 7, Train loss: 33.02083 , Train Acc: 0.6000, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 8, Train loss: 32.98611 , Train Acc: 0.6667, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 9, Train loss: 32.98611 , Train Acc: 0.6667, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 10, Train loss: 32.95139 , Train Acc: 0.7333, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 11, Train loss: 33.09028 , Train Acc: 0.4667, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 12, Train loss: 32.95139 , Train Acc: 0.7333, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 13, Train loss: 32.98611 , Train Acc: 0.6667, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 14, Train loss: 32.95139 , Train Acc: 0.7333, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 15, Train loss: 33.05556 , Train Acc: 0.5333, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 16, Train loss: 32.91667 , Train Acc: 0.8000, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 17, Train loss: 33.02083 , Train Acc: 0.6000, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 18, Train loss: 32.91667 , Train Acc: 0.8000, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 19, Train loss: 33.02083 , Train Acc: 0.6000, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 20, Train loss: 32.98611 , Train Acc: 0.6667, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 21, Train loss: 33.02083 , Train Acc: 0.6000, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 22, Train loss: 33.02083 , Train Acc: 0.6000, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 23, Train loss: 32.95139 , Train Acc: 0.7333, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 24, Train loss: 33.05556 , Train Acc: 0.5333, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 25, Train loss: 32.95139 , Train Acc: 0.7333, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 26, Train loss: 33.02083 , Train Acc: 0.6000, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 27, Train loss: 32.98611 , Train Acc: 0.6667, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 28, Train loss: 32.98611 , Train Acc: 0.6667, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 29, Train loss: 32.98611 , Train Acc: 0.6667, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 30, Train loss: 32.98611 , Train Acc: 0.6667, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 31, Train loss: 33.02083 , Train Acc: 0.6000, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 32, Train loss: 32.95139 , Train Acc: 0.7333, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 33, Train loss: 33.05556 , Train Acc: 0.5333, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 34, Train loss: 32.91667 , Train Acc: 0.8000, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 35, Train loss: 33.05556 , Train Acc: 0.5333, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 36, Train loss: 32.95139 , Train Acc: 0.7333, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 37, Train loss: 33.02083 , Train Acc: 0.6000, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 38, Train loss: 33.12500 , Train Acc: 0.4000, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 39, Train loss: 32.91667 , Train Acc: 0.8000, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 40, Train loss: 32.95139 , Train Acc: 0.7333, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 41, Train loss: 32.91667 , Train Acc: 0.8000, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 42, Train loss: 32.88194 , Train Acc: 0.8667, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 43, Train loss: 32.91667 , Train Acc: 0.8000, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 44, Train loss: 32.98611 , Train Acc: 0.6667, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 45, Train loss: 33.05556 , Train Acc: 0.5333, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 46, Train loss: 32.95139 , Train Acc: 0.7333, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 47, Train loss: 32.98611 , Train Acc: 0.6667, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 48, Train loss: 32.95139 , Train Acc: 0.7333, Val loss: 32.24432, Val acc: 0.6364\n",
-      "Epoch : 49, Train loss: 33.05556 , Train Acc: 0.5333, Val loss: 32.24432, Val acc: 0.6364\n"
+      "Epoch : 0, Train loss: 0.67131 , Train Acc: 0.6667, Val loss: 0.65179, Val acc: 0.6364\n",
+      "Epoch : 1, Train loss: 0.60901 , Train Acc: 0.8000, Val loss: 0.60667, Val acc: 0.6364\n",
+      "Epoch : 2, Train loss: 0.55858 , Train Acc: 0.6000, Val loss: 0.57264, Val acc: 0.6364\n",
+      "Epoch : 3, Train loss: 0.54474 , Train Acc: 0.8667, Val loss: 0.55036, Val acc: 0.6818\n",
+      "Epoch : 4, Train loss: 0.49190 , Train Acc: 0.8000, Val loss: 0.53681, Val acc: 0.7273\n",
+      "Epoch : 5, Train loss: 0.51956 , Train Acc: 0.8000, Val loss: 0.52898, Val acc: 0.7273\n",
+      "Epoch : 6, Train loss: 0.50392 , Train Acc: 0.6667, Val loss: 0.52341, Val acc: 0.7273\n",
+      "Epoch : 7, Train loss: 0.48751 , Train Acc: 0.7333, Val loss: 0.51823, Val acc: 0.8182\n",
+      "Epoch : 8, Train loss: 0.49757 , Train Acc: 0.8000, Val loss: 0.51395, Val acc: 0.8182\n",
+      "Epoch : 9, Train loss: 0.46935 , Train Acc: 0.7333, Val loss: 0.51065, Val acc: 0.8182\n",
+      "Epoch : 10, Train loss: 0.48092 , Train Acc: 0.6667, Val loss: 0.50725, Val acc: 0.8636\n",
+      "Epoch : 11, Train loss: 0.44166 , Train Acc: 0.8000, Val loss: 0.50343, Val acc: 0.8636\n",
+      "Epoch : 12, Train loss: 0.44842 , Train Acc: 0.8667, Val loss: 0.50056, Val acc: 0.8636\n",
+      "Epoch : 13, Train loss: 0.44958 , Train Acc: 0.7333, Val loss: 0.49846, Val acc: 0.8636\n",
+      "Epoch : 14, Train loss: 0.46903 , Train Acc: 1.0000, Val loss: 0.49491, Val acc: 0.8636\n",
+      "Epoch : 15, Train loss: 0.45823 , Train Acc: 0.8000, Val loss: 0.49453, Val acc: 0.8636\n",
+      "Epoch : 16, Train loss: 0.43911 , Train Acc: 0.8667, Val loss: 0.49316, Val acc: 0.8636\n",
+      "Epoch : 17, Train loss: 0.44200 , Train Acc: 0.7333, Val loss: 0.49180, Val acc: 0.8636\n",
+      "Epoch : 18, Train loss: 0.44171 , Train Acc: 0.8667, Val loss: 0.48914, Val acc: 0.8636\n",
+      "Epoch : 19, Train loss: 0.44607 , Train Acc: 1.0000, Val loss: 0.48837, Val acc: 0.8636\n",
+      "Epoch : 20, Train loss: 0.43774 , Train Acc: 0.8667, Val loss: 0.48508, Val acc: 0.8636\n",
+      "Epoch : 21, Train loss: 0.43914 , Train Acc: 0.8000, Val loss: 0.48613, Val acc: 0.8636\n",
+      "Epoch : 22, Train loss: 0.42926 , Train Acc: 0.8000, Val loss: 0.48577, Val acc: 0.8636\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[59], line 28\u001b[0m\n\u001b[1;32m     25\u001b[0m out \u001b[39m=\u001b[39m model(x)\n\u001b[1;32m     27\u001b[0m loss \u001b[39m=\u001b[39m loss_function(out, y\u001b[39m.\u001b[39mfloat()\u001b[39m.\u001b[39munsqueeze(\u001b[39m1\u001b[39m))\n\u001b[0;32m---> 28\u001b[0m loss\u001b[39m.\u001b[39;49mbackward()\n\u001b[1;32m     29\u001b[0m optim\u001b[39m.\u001b[39mstep()\n\u001b[1;32m     32\u001b[0m y_pred \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mround(out)\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/torch/_tensor.py:487\u001b[0m, in \u001b[0;36mTensor.backward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    477\u001b[0m \u001b[39mif\u001b[39;00m has_torch_function_unary(\u001b[39mself\u001b[39m):\n\u001b[1;32m    478\u001b[0m     \u001b[39mreturn\u001b[39;00m handle_torch_function(\n\u001b[1;32m    479\u001b[0m         Tensor\u001b[39m.\u001b[39mbackward,\n\u001b[1;32m    480\u001b[0m         (\u001b[39mself\u001b[39m,),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    485\u001b[0m         inputs\u001b[39m=\u001b[39minputs,\n\u001b[1;32m    486\u001b[0m     )\n\u001b[0;32m--> 487\u001b[0m torch\u001b[39m.\u001b[39;49mautograd\u001b[39m.\u001b[39;49mbackward(\n\u001b[1;32m    488\u001b[0m     \u001b[39mself\u001b[39;49m, gradient, retain_graph, create_graph, inputs\u001b[39m=\u001b[39;49minputs\n\u001b[1;32m    489\u001b[0m )\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/torch/autograd/__init__.py:200\u001b[0m, in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    195\u001b[0m     retain_graph \u001b[39m=\u001b[39m create_graph\n\u001b[1;32m    197\u001b[0m \u001b[39m# The reason we repeat same the comment below is that\u001b[39;00m\n\u001b[1;32m    198\u001b[0m \u001b[39m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[1;32m    199\u001b[0m \u001b[39m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[0;32m--> 200\u001b[0m Variable\u001b[39m.\u001b[39;49m_execution_engine\u001b[39m.\u001b[39;49mrun_backward(  \u001b[39m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[1;32m    201\u001b[0m     tensors, grad_tensors_, retain_graph, create_graph, inputs,\n\u001b[1;32m    202\u001b[0m     allow_unreachable\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, accumulate_grad\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
