--- a/lung_model.ipynb
+++ b/lung_model.ipynb
@@ -123,17 +123,24 @@
     "        self.conv1 = nn.Conv2d(1, 16, kernel_size=3, stride=1, padding=1)\n",
     "        self.relu1 = nn.ReLU()\n",
     "        self.pool1 = nn.MaxPool2d(kernel_size=2, stride=2, padding=0)\n",
+    "        self.batchnorm1 = nn.BatchNorm2d(num_features=16)\n",
+    "        self.dropout1 = nn.Dropout(0.3)\n",
     "\n",
     "        self.conv2 = nn.Conv2d(16, 32, kernel_size=3, stride=1, padding=1)\n",
     "        self.relu2 = nn.ReLU()\n",
     "        self.pool2 = nn.MaxPool2d(kernel_size=2, stride=2, padding=0)\n",
+    "        self.batchnorm2 = nn.BatchNorm2d(num_features=32)\n",
+    "        self.dropout2 = nn.Dropout(0.3)\n",
     "\n",
     "        self.conv3 = nn.Conv2d(32, 64, kernel_size=3, stride=1, padding=1)\n",
     "        self.relu3 = nn.ReLU()\n",
     "        self.pool3 = nn.MaxPool2d(kernel_size=2, stride=2, padding=0)\n",
+    "        self.batchnorm3 = nn.BatchNorm2d(num_features=64)\n",
+    "        self.dropout3 = nn.Dropout(0.3)\n",
     "\n",
     "        self.fc1 = nn.Linear(64 * 32 * 32, 128)\n",
     "        self.relu4 = nn.ReLU()\n",
+    "        self.dropout4=nn.Dropout(0.3)\n",
     "        self.fc2 = nn.Linear(128, 1)\n",
     "        self.sigmoid = nn.Sigmoid()\n",
     "\n",
@@ -141,18 +148,25 @@
     "        x = self.conv1(x)\n",
     "        x = self.relu1(x)\n",
     "        x = self.pool1(x)\n",
+    "        x = self.batchnorm1(x)\n",
+    "        x = self.dropout1(x)\n",
     "\n",
     "        x = self.conv2(x)\n",
     "        x = self.relu2(x)\n",
     "        x = self.pool2(x)\n",
+    "        x = self.batchnorm2(x)\n",
+    "        x = self.dropout2(x)\n",
     "\n",
     "        x = self.conv3(x)\n",
     "        x = self.relu3(x)\n",
     "        x = self.pool3(x)\n",
+    "        x = self.batchnorm3(x)\n",
+    "        x = self.dropout3(x)\n",
     "\n",
     "        x = x.view(-1, 64 * 32 * 32)\n",
     "        x = self.fc1(x)\n",
     "        x = self.relu4(x)\n",
+    "        x = self.dropout4(x)\n",
     "        x = self.fc2(x)\n",
     "        x = self.sigmoid(x)\n",
     "        return x"
